# canze-rs

./: .gitignore  Cargo.toml  README.md
profiles/: ev6.json  ioniq5.json  mg4.json  niro.json  zoe.json
src/: config.rs  main.rs
