[package]
name = "canze-rs"
authors = ['Mariusz Białończyk', 'Richard M']
version = "0.2.0"
edition = "2021"
license = 'GPL-2.0'
description = 'EV OBD-II telemetry logger'
documentation = 'https://github.com/kronflux/canze-rs'
readme = 'README.md'
include = ['/README.md', '/LICENSE', '/Cargo.toml', '/Cargo.lock', '/src/*.rs', 'images/*']
keywords = ['canze', 'can', 'renault', 'zoe', 'ze', 'ev', 'obd', 'ioniq', 'ev6', 'mg4', 'niro', 'kia', 'hyundai', 'aa-proxy-rs']
categories = ['command-line-utilities']
homepage = 'https://github.com/kronflux/canze-rs'
repository = 'https://github.com/kronflux/canze-rs'

[dependencies]
log = "0.4.1"
simplelog = { version = "0.11.2", features = ["paris", "ansi_term"] }
ctrlc = { version = "3.1.0", features = ["termination"] }
rust-ini = "0.10.3"
clap = { version = "3.0.13", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
bluer = { version = "0.17.1", features = ["rfcomm"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
